# users-template

./: .env.example  README.md  pyproject.toml
app/: lifespan.py  main.py
app/core/: config.py  database.py  user_manager.py
app/models/: __init__.py  base.py  mixin.py  user.py
app/schemas/: user.py
